working but slow version

--- a/data_mining/.project
+++ b/data_mining/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>data_mining</name>
+	<name>Data_Mining_Simple</name>
 	<comment></comment>
 	<projects>
 	</projects>
