--- a/data_mining_flink/pom.xml
+++ b/data_mining_flink/pom.xml
@@ -9,7 +9,7 @@
     <dependency>
       <groupId>org.apache.flink</groupId>
       <artifactId>flink-java</artifactId>
-      <version>0.9.0-milestone-1</version>
+      <version>0.9.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.flink</groupId>
